style: apply Spotless formatting